# fergusson

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  TASKS.md  cli.py  compose.yaml  main.py  pyproject.toml
docs/: ARCHITECTURE.md  Memory.md
script/: fergusson.service  install_service.sh
src/: config.py  runners.py
src/agent/: archiver.py  core.py  memory.py  relational_memory.py  skills.py  voice.py
src/broker/: bus.py  schemas.py
src/channels/: __init__.py  base.py  discord.py
src/db/: models.py  session.py
src/prompt/: archiver.j2  core.j2  core.md  relational_memory_extractor.md
src/services/: elevenlabs.py
src/tools/: __init__.py  bash.py  fs.py  web_tools.py
tests/: test_model_config.py  test_relational_memory.py  test_shared_history.py  test_skills.py  test_workspace_paths.py
workspace/config/: config.json
workspace/skills/clawhub/: SKILL.md
workspace/skills/common-gws-opeartions/: SKILL.md
workspace/skills/gog/: SKILL.md
workspace/skills/gws-setup-assistant/: SKILL.md
workspace/skills/personal-google-workspace-assistant/: SKILL.md
workspace/skills/routine-curator/: SKILL.md
workspace/skills/routine-curator/agents/: openai.yaml
workspace/skills/skill-curator/: SKILL.md
