[project]
name = "fergusson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioredis>=2.0.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.63.0",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.47",
    "websockets>=16.0",
]
