[project]
name = "fergusson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioredis>=2.0.1",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "logfire[google-genai]>=4.25.0",
    "markitdown>=0.1.5",
    "openai>=2.24.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.63.0",
    "pyyaml>=6.0.3",
    "redis>=7.2.1",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.47",
    "textual>=8.0.0",
    "websockets>=16.0",
]
